Created the basic form layout in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -5,11 +5,34 @@
   <head>
     <meta charset="utf-8">
     <title>Form Homework</title>
-    <
+    <link href='style.css' rel='stylesheet'>
   </head>
 
   <body>
+    <user-signup>
+      <h1>Force User Signup Form</h1>
+    <fieldset>
+            <legend>Basic Info</legend>
+            <aside>
+            <label for='fullname-input'>Full Name</label>
+            <input type='text' name='fullname' id ='fullname-input'>
+          </aside>
+          <aside><aside>
+          <aside><aside>
+          <aside><aside>
+          <aside><aside>
+     </fieldset>
 
+     <fieldset>
+             <legend>Abilites</legend>
+
+      </fieldset>
+
+      <fieldset>
+              <legend>Application Info</legend>
+
+       </fieldset>
+       </user-signup
   </body>
 
 </html>
