Basic Info form fleshed out with most compaonents added and minor formatting changes in css.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <user-signup>
+    <form>
       <h1>Force User Signup Form</h1>
     <fieldset>
             <legend>Basic Info</legend>
@@ -17,22 +17,67 @@
             <label for='fullname-input'>Full Name</label>
             <input type='text' name='fullname' id ='fullname-input'>
           </aside>
-          <aside><aside>
-          <aside><aside>
-          <aside><aside>
-          <aside><aside>
+          <aside>
+            <label for='profile-upld-btn'>Profile Pic</label>
+            <input type="file" name="profile-uplf" accept="image/*">
+            <aside>
+          <aside>
+            <label for='email-input'>Email</label>
+            <input type='text' name='email' id ='email-input'>
+          <aside>
+          <aside>
+            Side:
+            <label><input type ='radio' name='side' value='light'>
+            </label>
+              Light
+            <label><input type ='radio' name='side' value='dark'>
+            </label>
+            Dark
+          <aside>
+          <aside>
+            <label for='origins-txt'>Origins Story</label>
+            <input type='textarea' name='orgins' id ='origins-input'>
+          <aside>
      </fieldset>
 
      <fieldset>
              <legend>Abilites</legend>
+             <label for='profile-upld-btn'>Lightsaber Color</label>
+           <aside>
+           <aside>
+             <label for='email-input'>How many objects can you levitate at once?</label>
+           <aside>
+           <aside>
+             <label for='profile-upld-btn'>Favorite ability</label>
+           <aside>
+           <aside>
+             <label for='origins-txt'>Favorite ability</label>
+           <aside>
 
       </fieldset>
 
       <fieldset>
               <legend>Application Info</legend>
+              <label for='profile-upld-btn'>Desired Mentor</label>
+            <aside>
+            <aside>
+              <label for='email-input'>Application date</label>
+            <aside>
+            <aside>
+              <label for='profile-upld-btn'>Password</label>
+            <aside>
+            <aside>
+              <label for='origins-txt'>How do you get to the Dark Side</label>
+            <aside>
+              <aside>
+                <label for='origins-txt'>Start Over Button</label>
+              <aside>
+                <aside>
+                  <label for='origins-txt'>Apply Button</label>
+                <aside>
 
        </fieldset>
-       </user-signup
+     </form>
   </body>
 
 </html>
@@ -60,7 +105,7 @@ Force User Signup Form
     Lightsaber Color selection box
     How many objects can you levitate input field-cannot be less than zero
     Favorite ability input box
-    Checkbox labeled Pilot Experience with 6 elements
+    Checkbox labeled Favorite ability with 6 elements
 
   APPLICATION INFO
     desired info input box
