Basic layouts and formatting is done for all forms. NO change to css.

--- a/index.html
+++ b/index.html
@@ -89,22 +89,33 @@
 
       <fieldset>
               <legend>Application Info</legend>
-              <label for='profile-upld-btn'>Desired Mentor</label>
+              <label for='mentor'>Desired Mentor</label>
+               <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda">
             <aside>
             <aside>
-              <label for='email-input'>Application date</label>
+              <label for='app-date'>Application date</label>
+              <input type='date' name='date' id ='app-date'>
             <aside>
             <aside>
-              <label for='profile-upld-btn'>Password</label>
+              <label for='password'>Application Password</label>
+              <input type='text' name='pass' id ='password'>
+
             <aside>
             <aside>
-              <label for='origins-txt'>How do you get to the Dark Side</label>
+              <label for='dark-side'>How do you get to the Dark Side</label>
+              <textarea name="dark-side" rows="10" cols="50"></textarea>
+
             <aside>
               <aside>
-                <label for='origins-txt'>Start Over Button</label>
+                <label>
+                <button name="start-ovr-btn"id ='startover-btn'>Start Over</button>
+                </label>
               <aside>
                 <aside>
-                  <label for='origins-txt'>Apply Button</label>
+                  <label>
+                    <button name="submit-btn"id ='ssubmit-btn'>Submit</button>
+
+                  </label>
                 <aside>
 
        </fieldset>
