Nearly finished build with properly formatted elements.

--- a/index.html
+++ b/index.html
@@ -15,30 +15,29 @@
             <legend>Basic Info</legend>
             <aside>
             <label for='fullname-input'>Full Name</label>
-            <input type='text' name='fullname' id ='fullname-input'>
+            <input type='text' name='fullname' id ='fullname-input' placeholder='Luke Skywalker' size="60">
           </aside>
           <aside>
-            <label for='profile-upld-btn'>Profile Pic</label>
-            <input type="file" name="profile-uplf" accept="image/*">
+            <label for='profile-upld'>Profile Pic</label>
+            <input type="file" name="profile-upld" accept="image/*">
             <aside>
           <aside>
             <label for='email-input'>Email</label>
-            <input type='text' name='email' id ='email-input'>
+            <input type='text' name='email' id ='email-input' placeholder='starprincess77@alderaan-online.net' size="60">
           <aside>
           <aside>
             <label>
-              Side:
-              <label><input type ='radio' name='side' value='light'>
+              <h4>Side:</h4>
+              <label class="check-rad"><input type ='radio' name='side' value='light'>
               </label>
                 Light
-              <label><input type ='radio' name='side' value='dark'>
+              <label class="check-rad"><input type ='radio' name='side' value='dark'>
               </label>
-                 Dark
+                Dark
           <aside>
           <aside>
             <label for='origins-txt'>Origins Story</label>
-            <textarea name="origins-txt" rows="10" cols="50">Write something here
-            </textarea>
+            <textarea name="origins-txt" rows="10" cols="60"></textarea>
             <aside>
      </fieldset>
 
@@ -55,42 +54,41 @@
            <aside>
            <aside>
              <label for='levitate'>How many objects can you levitate at once?</label>
-             <input type='number' name='number-obj' min="1" id ='number-input'>
+             <input type='number' name='number-obj' min='1'  max='99' id='number-input'>
            <aside>
            <aside>
              <label for='fav-ability'>Favorite ability</label>
-             <input type='text' name='fav-ability' id ='ffav-ability'placeholder="precognition">
+             <input type='text' name='fav-ability' id ='fav-ability'placeholder="precognition" size="60">
            <aside>
            <aside>
 
                   Pilot Ability
-                  <label><input type ='checkbox' name='pilot' value='speeder'>
+                  <label class="check-rad"><input type ='checkbox' name='pilot' value='speeder'>
                   </label>
                     Speeder
-                  <label><input type ='checkbox' name='pilot' value='transport'>
+                  <label class="check-rad"><input type ='checkbox' name='pilot' value='transport'>
                   </label>
                     Transport
-                    <label><input type ='checkbox' name='pilot' value='xwing'>
+                    <label class="check-rad"><input type ='checkbox' name='pilot' value='xwing'>
                     </label>
                       X-Wing
-                    <label><input type ='checkbox' name='pilot' value='tiefighter'>
+                    <label class="check-rad"><input type ='checkbox' name='pilot' value='tiefighter'>
                     </label>
                       Tie Fighter
-                      <label><input type ='checkbox' name='pilot' value='starship'>
+                      <label class="check-rad"><input type ='checkbox' name='pilot' value='starship'>
                       </label>
                         Starship
-                      <label><input type ='checkbox' name='pilot' value='bantha'>
+                      <label class="check-rad"><input type ='checkbox' name='pilot' value='bantha'>
                       </label>
                         Bantha
-             </label>
-           <aside>
+           </aside>
 
       </fieldset>
 
       <fieldset>
               <legend>Application Info</legend>
               <label for='mentor'>Desired Mentor</label>
-               <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda">
+               <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda" size="60">
             <aside>
             <aside>
               <label for='app-date'>Application date</label>
@@ -103,7 +101,7 @@
             <aside>
             <aside>
               <label for='dark-side'>How do you get to the Dark Side</label>
-              <textarea name="dark-side" rows="10" cols="50"></textarea>
+              <textarea name="dark-side" rows="10" cols="60"></textarea>
 
             <aside>
               <aside>
@@ -113,7 +111,7 @@
               <aside>
                 <aside>
                   <label>
-                    <button name="submit-btn"id ='ssubmit-btn'>Submit</button>
+                    <button name="submit-btn"id ='submit-btn'>Submit</button>
 
                   </label>
                 <aside>
