Minor changes to formatting fixing some incorrect closures.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
      </fieldset>
 
      <fieldset>
+
              <legend>Abilites</legend>
+              <aside>
              <label for='sbr-clr'>Lightsaber Color</label>
               <select name="sbr-clr">
               <option value="select">Select Color</option>
@@ -51,7 +53,7 @@
               <option value="red">Red</option>
               <option value="red">Purple</option>
             </select>
-           <aside>
+          </aside>
            <aside>
              <label for='levitate'>How many objects can you levitate at once?</label>
              <input type='number' name='number-obj' min='1'  max='99' id='number-input'>
@@ -62,7 +64,7 @@
            <aside>
            <aside>
 
-                  Pilot Ability
+                  <h4>Pilot Ability</h4>
                   <label class="check-rad"><input type ='checkbox' name='pilot' value='speeder'>
                   </label>
                     Speeder
@@ -86,10 +88,12 @@
       </fieldset>
 
       <fieldset>
+
               <legend>Application Info</legend>
+              <aside>
               <label for='mentor'>Desired Mentor</label>
                <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda" size="60">
-            <aside>
+            </aside>
             <aside>
               <label for='app-date'>Application date</label>
               <input type='date' name='date' id ='app-date'>
