--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <legend>Basic Info</legend>
                         <aside>
                           <label for='fullname-input'><h4>Full Name</h4></label>
-                          <input type='text' name='fullname' id ='fullname-input' placeholder='Leia Organa'>
+                          <input type='text' name='fullname' id ='fullname-input' required="" placeholder='Leia Organa'>
                         </aside>
                         <aside>
                             <label for='profile-upld'><h4>Profile Pic</h4></label>
-                            <input type="file" name="profile-upld" accept="image/*">
+                            <input type="file" name="profile-upld" accept="image/*" required="">
                         </aside>
                         <aside>
                             <label for='email-input'><h4>Email</h4></label>
-                            <input type='text' name='email' id ='email-input' placeholder='starprincess77@alderaan-online.net'>
+                            <input type='text' name='email' id ='email-input' required="" placeholder='starprincess77@alderaan-online.net'>
                         </aside>
                         <aside>
                             <h4>Side:</h4>
@@ -45,7 +45,7 @@
                         </aside>
                         <aside>
                         <label for='origins-txt'><h4>Origins Story</h4></label>
-                        <textarea name="origins-txt" rows="10" cols="67"></textarea>
+                        <textarea name="origins-txt" rows="10" cols="67" required=""></textarea>
                         </aside>
                 </fieldset>
 
@@ -53,7 +53,7 @@
                     <legend>Abilites</legend>
                         <aside>
                               <label for='sbr-clr'><h4>Lightsaber Color</h4></label>
-                              <select name="sbr-clr">
+                              <select name="sbr-clr" required="">
                               <option value="select">Select Color</option>
                               <option value="green" selected>Green</option>
                               <option value="blue">Blue</option>
@@ -63,11 +63,11 @@
                         </aside>
                         <aside>
                              <label for='levitate'><h4>How many objects can you levitate at once?</h4></label>
-                             <input type='number' name='number-obj' min='1' id='number-input'>
+                             <input type='number' name='number-obj' min='1' id='number-levitate' required="">
                        </aside>
                        <aside>
                              <label for='fav-ability'><h4>Favorite ability</h4></label>
-                             <input type='text' name='fav-ability' id ='fav-ability'placeholder='precognition'>
+                             <input type='text' name='fav-ability' id ='fav-ability'placeholder='precognition' required="">
                        </aside>
                        <aside>
                               <h4>Pilot Ability</h4>
@@ -103,19 +103,19 @@
                      <legend>Application Info</legend>
                         <aside>
                           <label for='mentor'><h4>Desired Mentor</h4></label>
-                            <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda">
+                            <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda" required="">
                         </aside>
                         <aside>
                           <label for='app-date'><h4>Application date</h4></label>
-                          <input type='date' name='date' id ='app-date'>
+                          <input type='date' name='date' id ='app-date' required="">
                         </aside>
                         <aside>
                           <label for='password'><h4>Application Password</h4></label>
-                          <input type='text' name='pass' id ='password'>
+                          <input type='text' name='pass' id ='password' required="">
                         </aside>
                         <aside>
                           <label for='dark-side'><h4>How do you get to the Dark Side</h4></label>
-                          <textarea name="dark-side" rows="10" cols="67"></textarea>
+                          <textarea name="dark-side" rows="10" cols="67" required=""></textarea>
                         </aside>
 
                         <aside>
@@ -138,203 +138,3 @@
         <footer>
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!----
-<!DOCTYPE html>
-
-<html lang="en">
-
-  <head>
-    <meta charset="utf-8">
-    <title>Form Homework</title>
-    <link href='style.css' rel='stylesheet'>
-  </head>
-
-  <body>
-    <form action="http://requestb.in/14qg7en1" method='POST'>
-      <h1>Force User Signup Form</h1>
-      <fieldset>
-          <legend>Basic Info</legend>
-            <aside>
-              <label for='fullname-input'><h4>Full Name</h4></label>
-              <input type='text' name='fullname' id ='fullname-input' placeholder='Leia Organa' size="70">
-            </aside>
-            <aside>
-              <label for='profile-upld'><h4>Profile Pic</h4></label>
-              <input type="file" name="profile-upld" accept="image/*">
-           </aside>
-           <aside>
-            <label for='email-input'><h4>Email</h4></label>
-            <input type='text' name='email' id ='email-input' placeholder='starprincess77@alderaan-online.net' size="70">
-           </aside>
-           <aside>
-                <h4>Side:</h4>
-                <label class="check-rad"><input type ='radio' name='side' value='light'>
-                </label>
-                  Light
-                <label class="check-rad"><input type ='radio' name='side' value='dark'>
-                </label>
-                  Dark
-           </aside>
-           <aside>
-            <label for='origins-txt'><h4>Origins Story</4></label>
-            <textarea name="origins-txt" rows="10" cols="70"></textarea>
-          </aside>
-     </fieldset>
-
-          <fieldset>
-
-             <legend>Abilites</legend>
-              <aside>
-               <label for='sbr-clr'><h4>Lightsaber Color</h4></label>
-                <select name="sbr-clr">
-                  <option value="select">Select Color</option>
-                  <option value="green" selected>Green</option>
-                  <option value="blue">Blue</option>
-                  <option value="red">Red</option>
-                  <option value="red">Purple</option>
-                </select>
-            </aside>
-           <aside>
-             <label for='levitate'><h4>How many objects can you levitate at once?</h4></label>
-             <input type='number' name='number-obj' min='1'  max='99' id='number-input'>
-           </aside>
-           <aside>
-             <label for='fav-ability'><h4>Favorite ability</h4></label>
-             <input type='text' name='fav-ability' id ='fav-ability'placeholder="precognition" size="70">
-           </aside>
-           <aside>
-                  <h4>Pilot Ability</h4>
-                  <label class="check-rad">
-                    <input type ='checkbox' name='pilot' value='speeder'>
-                  </label>
-                    Speeder
-                  <label class="check-rad">
-                    <input type ='checkbox' name='pilot' value='transport'>
-                  </label>
-                    Transport
-                    <label class="check-rad">
-                      <input type ='checkbox' name='pilot' value='xwing'>
-                    </label>
-                      X-Wing
-                    <label class="check-rad">
-                      <input type ='checkbox' name='pilot' value='tiefighter'>
-                    </label>
-                      Tie Fighter
-                      <label class="check-rad">
-                        <input type ='checkbox' name='pilot' value='starship'>
-                      </label>
-                        Starship
-                      <label class="check-rad">
-                        <input type ='checkbox' name='pilot' value='bantha'>
-                      </label>
-                        Bantha
-            </aside>
-
-      </fieldset>
-
-      <fieldset>
-
-            <legend>Application Info</legend>
-            <aside>
-              <label for='mentor'><h4>Desired Mentor</h4></label>
-               <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda" size="70">
-            </aside>
-            <aside>
-              <label for='app-date'><h4>Application date</h4></label>
-              <input type='date' name='date' id ='app-date'>
-            </aside>
-            <aside>
-              <label for='password'><h4>Application Password</h4></label>
-              <input type='text' name='pass' id ='password'>
-            </aside>
-            <aside>
-              <label for='dark-side'><h4>How do you get to the Dark Side</h4></label>
-              <textarea name="dark-side" rows="10" cols="70"></textarea>
-            </aside>
-
-              <aside>
-                <label>
-                <button name="start-ovr-btn"id ='startover-btn'>Start Over</button>
-                </label>
-              </aside>
-                <aside>
-                  <label>
-                    <button name="submit-btn"id ='submit-btn'>Submit</button>
-                  </label>
-                </aside>
-
-       </fieldset>
-     </form>
-  </body>
-
-</html>
-
--------->
-<!--------------
-
-Force User Signup Form
-
-3 box setup- will need to display inline
-    box titles are
-    Basic Info
-    Abilities
-    Application Info
-
-
-  BASIC INFO
-    input box for full name
-    button to choose a profile pic
-    input box for email
-     2 radio buttons for force side
-     text area titles Origin Story
-
-  ABILITIES
-    Lightsaber Color selection box
-    How many objects can you levitate input field-cannot be less than zero
-    Favorite ability input box
-    Checkbox labeled Favorite ability with 6 elements
-
-  APPLICATION INFO
-    desired info input box
-    application date (date selection field)
-    application password
-    How do you get to the Dark Side textarea input field
-    start over and apply buttons underneath
-
-
-    ***NOTES
-
-    pressing the "apply" button must submit to a url
-    all fields highlight when you focus over it
-    full name field is required
-    profile pic actually lets you choose a pic
-    lefitate objects can not be less than zero
-
-
-
--------------------->
