Last minute check found error with type association on email type attribute.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </aside>
                         <aside>
                             <label for='email-input'><h4>Email</h4></label>
-                            <input type='text' name='email' id ='email-input' required="" placeholder='starprincess77@alderaan-online.net'>
+                            <input type='email' name='email' id ='email-input' required="" placeholder='starprincess77@alderaan-online.net'>
                         </aside>
                         <aside>
                             <h4>Side:</h4>
