--- a/index.html
+++ b/index.html
@@ -11,117 +11,121 @@
     <body>
       <header>
           <h1>Force User Signup Form</h1>
-        <header>
-        <form action="http://requestb.in/14qg7en1" method='POST'>
-                <fieldset>
-                    <legend>Basic Info</legend>
-                        <aside>
-                          <label for='fullname-input'><h4>Full Name</h4></label>
-                          <input type='text' name='fullname' id ='fullname-input' required placeholder='Leia Organa'>
-                        </aside>
-                        <aside>
-                            <label for='profile-upld'><h4>Profile Pic</h4></label>
-                            <input type="file" name="profile-upld" accept="image/*"  class="profile-pic" required>
-                        </aside>
-                        <aside>
-                            <label for='email-input'><h4>Email</h4></label>
-                            <input type='text' name='email' id ='email-input' required placeholder='starprincess77@alderaan-online.net'>
-                        </aside>
-                        <aside>
-                            <h4>Side:</h4>
-                            <label class="check-rad"><input type ='radio' name='side' value='light'>
-                            </label>
-                            Light
-                            <label class="check-rad"><input type ='radio' name='side' value='dark'>
-                            </label>
-                            Dark
-                        </aside>
-                        <aside>
-                        <label for='origins-txt'><h4>Origins Story</h4></label>
-                        <textarea name="origins-txt" rows="10" cols="67" required></textarea>
-                        </aside>
-                </fieldset>
+      </header>
 
-                <fieldset>
-                    <legend>Abilites</legend>
-                        <aside>
-                              <label for='sbr-clr'><h4>Lightsaber Color</h4></label>
-                              <select name="sbr-clr" required>
-                              <option value="select" selected disabled="">Select Color</option>
-                              <option value="green" >Green</option>
-                              <option value="blue">Blue</option>
-                              <option value="red">Red</option>
-                              <option value="red">Purple</option>
-                              </select>
-                        </aside>
-                        <aside>
-                             <label for='levitate'><h4>How many objects can you levitate at once?</h4></label>
-                             <input type='number' name='number-obj' min='1' id='number-levitate' class="levitate" required>
-                       </aside>
-                       <aside>
-                             <label for='fav-ability'><h4>Favorite ability</h4></label>
-                             <input type='text' name='fav-ability' id ='fav-ability'placeholder='precognition' required>
-                       </aside>
-                       <aside>
-                              <h4>Pilot Ability</h4>
-                              <label class="check-rad">
-                                    <input type ='checkbox' name='pilot' value='speeder'>
-                              </label>
-                                Speeder
-                              <label class="check-rad">
-                                    <input type ='checkbox' name='pilot' value='transport'>
-                              </label>
-                                Transport
-                              <label class="check-rad">
-                                    <input type ='checkbox' name='pilot' value='xwing'>
-                              </label>
-                                  X-Wing
-                              <label class="check-rad">
-                                    <input type ='checkbox' name='pilot' value='tiefighter'>
-                              </label>
+      <form action="http://requestb.in/14qg7en1" method='POST'>
+              <fieldset>
+                  <legend>Basic Info</legend>
+                      <aside>
+                        <label><h4>Full Name</h4></label>
+                        <input type='text' name='fullname' id ='fullname-input' required placeholder='Leia Organa'>
+                      </aside>
+                      <aside>
+                          <label for='profile-upld'><h4>Profile Pic</h4></label>
+                          <input type="file" name="profile-upld" accept="image/*"  id='profile-upld' class="profile-pic">
+                      </aside>
+                      <aside>
+                          <label for='email-input'><h4>Email</h4></label>
+                          <input type='text' name='email' id ='email-input' required placeholder='starprincess77@alderaan-online.net'>
+                      </aside>
+                      <aside>
+                          <h4>Side:</h4>
+                          <label class="check-rad"><input type ='radio' name='side' value='light'>
+                          </label>
+                          Light
+                          <label class="check-rad"><input type ='radio' name='side' value='dark'>
+                          </label>
+                          Dark
+                      </aside>
+                      <aside>
+                          <label for='origins-txt'><h4>Origins Story</h4></label>
+                          <textarea name="origins-txt" required></textarea>
+                      </aside>
+              </fieldset>
+
+              <fieldset>
+                  <legend>Abilites</legend>
+                      <aside>
+                            <label for='sbr-clr'><h4>Lightsaber Color</h4></label>
+                            <select name="sbr-clr" id='saber-color'>
+                            <option selected disabled>Select Color</option>
+                            <option value="green" >Green</option>
+                            <option value="blue">Blue</option>
+                            <option value="red">Red</option>
+                            <option value="red">Purple</option>
+                            </select>
+                      </aside>
+                      <aside>
+                           <label for='levitate'><h4>How many objects can you levitate at once?</h4></label>
+                           <input type='number' name='number-obj' min='1' id='number-levitate' class="levitate">
+                     </aside>
+                     <aside>
+                           <label for='fav-ability'><h4>Favorite ability</h4></label>
+                           <input type='text' name='fav-ability' id ='fav-ability'placeholder='precognition'>
+                     </aside>
+                     <aside>
+                            <h4>Pilot Ability</h4>
+                            <label class="check-rad" id="pilot-ability">
+                                  <input type ='checkbox' name='pilot' value='speeder'>
+                                    Speeder
+                            </label>
+
+                            <label class="check-rad">
+                                  <input type ='checkbox' name='pilot' value='transport'>
+                                  Transport
+                            </label>
+
+                            <label class="check-rad">
+                                  <input type ='checkbox' name='pilot' value='xwing'>
+                                    X-Wing
+                            </label>
+
+                            <label class="check-rad">
+                                  <input type ='checkbox' name='pilot' value='tiefighter'>
                                   Tie Fighter
-                              <label class="check-rad">
-                                    <input type ='checkbox' name='pilot' value='starship'>
-                              </label>
+                            </label>
+
+                            <label class="check-rad">
+                                  <input type ='checkbox' name='pilot' value='starship'>
                                     Starship
-                              <label class="check-rad">
-                                    <input type ='checkbox' name='pilot' value='bantha'>
-                              </label>
+                            </label>
+
+                            <label class="check-rad">
+                                  <input type ='checkbox' name='pilot' value='bantha'>
                                     Bantha
-                        </aside>
+                            </label>
 
-                </fieldset>
+                      </aside>
 
-                <fieldset>
-                     <legend>Application Info</legend>
-                        <aside>
-                          <label for='mentor'><h4>Desired Mentor</h4></label>
-                            <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda" required>
-                        </aside>
-                        <aside>
-                          <label for='app-date'><h4>Application date</h4></label>
-                          <input type='date' name='date' id ='app-date' required>
-                        </aside>
-                        <aside>
-                          <label for='password'><h4>Application Password</h4></label>
-                          <input type='text' name='pass' id ='password' required>
-                        </aside>
-                        <aside>
-                          <label for='dark-side'><h4>How do you get to the Dark Side</h4></label>
-                          <textarea name="dark-side" rows="10" cols="67" requires></textarea>
-                        </aside>
+              </fieldset>
+
+              <fieldset>
+                   <legend>Application Info</legend>
+                      <aside>
+                        <label for='mentor'><h4>Desired Mentor</h4></label>
+                          <input type='text' name='mentor' id ='des-mentor'placeholder="Yoda" >
+                      </aside>
+                      <aside>
+                        <label for='app-date'><h4>Application date</h4></label>
+                        <input type='date' name='date' id ='app-date' required class='date'>
+                      </aside>
+                      <aside>
+                        <label for='password'><h4>Application Password</h4></label>
+                        <input type='password' name='pass' id ='password' class='password' required>
+                      </aside>
+                      <aside>
+                        <label for='dark-side'><h4>How do you get to the Dark Side</h4></label>
+                        <textarea name="dark-side" id="dark-side" ></textarea>
+                      </aside>
 
 
-                      <aside class="res-sub">
+                     <aside class="res-sub">
                        <input type='reset' name="start-ovr-btn" id ='startover-btn' value="Start Over"></input>
-                        <!-- <button name="start-ovr-btn"id ='startover-btn' type ='reset'>Start Over</button>-->
                        <input type='submit' name="submit-btn" id ='submit-btn'></input>
-                       <aside>
+                     <aside>
+            </fieldset>
 
-
-                </fieldset>
-
-                </form>
+          </form>
         <footer>
             <p>&copy; 2017 The Republic</p>
         <footer>
